# video2x

./: .clang-format  .flake8  .gitattributes  .gitignore  .gitmodules  .justfile  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.cuda  Dockerfile.slim-alpine  Help  Makefile  NOTICE  PKGBUILD  README.md  SECURITY.md  _config.yml  config_generator.py  ffmpeg.py  pdm.toml  pyproject.toml  requirements.txt  setup.cfg  shell.nix  video2x.json  video2x.py  waifu2x.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  codeql.yml  container.yml  docs.yml  issues.yml  nightly.yml  release.yml
cmake/: Video2XConfig.cmake.in  version.h.in
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md
docs/book/src/building/: README.md  linux.md  windows-qt6.md  windows.md
docs/book/src/developing/: README.md  architecture.md  libvideo2x.md
docs/book/src/installing/: README.md  linux.md  windows-qt6.md  windows.md
docs/book/src/other/: history.md
docs/book/src/running/: README.md  command-line.md  container.md  desktop.md
examples/: container-run-interpolate-rife.sh  container-run-upscale-waifu2x.sh  run-upscale-waifu2x.sh  run_interpolate_rife.py  run_upscale_waifu2x.py
include/: conversions.h  decoder.h  encoder.h  filter.h  fsutils.h  getopt.h  libplacebo.h  libplacebo_filter.h  libvideo2x.h  realesrgan_filter.h
include/libvideo2x/: avutils.h  char_defs.h  conversions.h  decoder.h  encoder.h  filter.h  filter_libplacebo.h  filter_realcugan.h  filter_realesrgan.h  frames_processor.h  fsutils.h  interpolator_rife.h  libplacebo.h  libplacebo_filter.h  libvideo2x.h  libvideo2x_export.h  logger_manager.h  logging.h  logutils.h  processor.h  processor_factory.h  realesrgan_filter.h  timer.h  version.h.in
licenses/: LICENSE-rich  LICENSE-srmd-ncnn-vulkan  apache-2.0.txt
models/: anime4k-mode-a.glsl
models/libplacebo/: anime4k-b+b.glsl  anime4k-b.glsl  anime4k-v4-a+a.glsl  anime4k-v4-c+a.glsl  anime4k-v4-c.glsl  anime4k-v4.1-gan.glsl
models/realcugan/models-nose/: up2x-no-denoise.param
models/realcugan/models-pro/: up2x-conservative.param  up3x-no-denoise.param
models/realcugan/models-se/: up2x-denoise1x.param  up3x-conservative.param  up4x-no-denoise.param
models/realesrgan/: realesr-generalv3-wdn-x4.param  realesrgan-plus-x2.param
models/rife/rife/: contextnet.param  flownet.param  fusionnet.param
models/rife/rife-anime/: contextnet.param  flownet.param  fusionnet.param
models/rife/rife-v2/: flownet.param
models/rife/rife-v2.3/: contextnet.param  fusionnet.param
models/rife/rife-v3.0/: contextnet.param  flownet.param
models/rife/rife-v4/: flownet.param
models/rife/rife-v4.25/: flownet.param
models/rife/rife-v4.25-lite/: flownet.param
models/rife/rife-v4.26/: flownet.param
models/rife/rife-v4.6/: flownet.param
packaging/appimage/: video2x.desktop
packaging/arch/: PKGBUILD
packaging/debian/: control  control.ubuntu2204  control.ubuntu2404
packaging/docker/: Dockerfile
scripts/: download_anime4k_glsl.py  download_merge_anime4k_glsl.py  run-interactive-container.sh  run-source-in-container.sh
src/: README.md  anime4k.py  avutils.cpp  bilogger.py  build.ps1  clip_base.yaml  companion.py  conversions.cpp  decoder.c  decoder.cpp  encoder.c  encoder.cpp  ffmpeg.py  filter_libplacebo.cpp  filter_realcugan.cpp  filter_realesrgan.cpp  frames_processor.cpp  fsutils.cpp  generate_pot.ps1  getopt.c  image_cleaner.py  interpolator_rife.cpp  libplacebo.cpp  libplacebo_filter.cpp  libvideo2x.c  libvideo2x.cpp  logger_manager.cpp  logging.cpp  logutils.cpp  placebo.cpp  processor_factory.cpp  progress_monitor.py  realesrgan_filter.cpp  requirements-linux.txt  requirements-windows.txt  requirements.txt  timer.cpp  upscaler.py  video2x.c  video2x.cpp  (+12 more)
src/images/: Video2X Banner.psd  Video2X GitHub Social Preview.psd  Video2X Logo.psd  video2x-icon.psd
src/locale/zh_CN/LC_MESSAGES/: video2x.mo  zh_CN.mo  zh_CN.po
src/pyinstaller/7z1900-extra/Far/: 7-ZipEng.hlf  7zToFar.ini  far7z.reg
src/pyinstaller/hooks/: hook-patoolib.py
src/wrappers/: anime4kcpp.py  ffmpeg.py  gifski.py  realsr_ncnn_vulkan.py  srmd_ncnn_vulkan.py  waifu2x_caffe.py  waifu2x_converter_cpp.py  waifu2x_ncnn_vulkan.py
tests/: test_upscaler.py  utils.py
tools/video2x/include/: argparse.h  logging.h  newline_safe_sink.h  timer.h  validators.h  vulkan_utils.h
tools/video2x/src/: argparse.cpp  logging.cpp  newline_safe_sink.cpp  validators.cpp  video2x.cpp  vulkan_utils.cpp
video2x/: __init__.py  __main__.py  bilogger.py  decoder.py  encoder.py  exceptions.py  interpolator.py  pipe_printer.py  processor.py  requirements.txt  upscaler.py  video2x.pot  video2x.py  video2x.yaml  video2x_gui.py  video2x_setup.py  video2x_setup_ubuntu.sh
video2x/images/: video2x-banner.psd  video2x-workflow-en_US.psd  video2x-workflow-zh_CN.psd
video2x/pyinstaller/7z1900-extra/: License.txt  history.txt  readme.txt
video2x/pyinstaller/7z1900-extra/Far/: 7-ZipEng.lng  7-ZipRus.hlf  7-ZipRus.lng  far7z.txt
video2x/wrappers/: anime4kcpp.py  gifski.py  waifu2x_caffe.py
